# directlink-android

./: gradlew  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/directlink/app/: BaseActivity.java  CallsActivity.java  ChatActivity.java  ChatAdapter.java  ChatItem.java  ConnectionManager.java  Contact.java  ContactsActivity.java  ContactsAdapter.java  DirectLinkClient.java  DirectLinkNotificationManager.java  LoginActivity.java  MainActivity.java  MessageDatabase.java  MessageReceiver.java  NotificationManager.java  RegisterActivity.java  SettingsActivity.java  UserProfileActivity.java  WebSocketService.java
app/src/main/res/drawable/: avatar_bg.xml  badge_bg.xml  edit_text_bg.xml  offline_dot.xml  online_dot.xml
app/src/main/res/layout/: activity_calls.xml  activity_chat.xml  activity_contacts.xml  activity_login.xml  activity_main.xml  activity_register.xml  activity_settings.xml  activity_user_profile.xml  bottom_nav.xml  bottom_nav_item.xml  chat_item.xml  friend_request_item.xml
rust/: Cargo.toml
rust/src/: lib.rs
